@@ -3390,6 +3390,7 @@ static const char  *static_camera_list[] =
 "Olympus E-PL2",
 "Olympus E-PL3",
 "Olympus E-PL5",
+"Olympus E-PL6",
 "Olympus E-PM1",
 "Olympus E-PM2",
 "Olympus E-M1",
@@ -3414,6 +3415,7 @@ static const char  *static_camera_list[] =
 "Panasonic DMC-FZ35/FZ38",
 "Panasonic DMC-FZ40",
 "Panasonic DMC-FZ50",
+"Panasonic DMC-FZ7",
 "Panasonic DMC-FZ70",
 "Panasonic DMC-FZ100",
 "Panasonic DMC-FZ150",
@@ -3478,6 +3480,10 @@ static const char  *static_camera_list[] =
 "PhaseOne IQ140",
 "PhaseOne IQ160",
 "PhaseOne IQ180",
+"PhaseOne IQ240",
+"PhaseOne IQ250",
+"PhaseOne IQ260",
+"PhaseOne IQ280",
 "PhaseOne LightPhase",
 "PhaseOne H 10",
 "PhaseOne H 20",
